force-app/main/default/objects/Module__c/fields/Baseline_Grant__c.field-meta.xml
<CustomField>
    <fullName>Baseline_Grant__c</fullName>
    <label>Baseline Grant</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>