force-app/main/default/objects/Module__c/fields/Competency__c.field-meta.xml
<CustomField>
    <fullName>Competency__c</fullName>
    <label>Competency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Strategy Execution</fullName>
            </value>
            <value>
                <fullName>Analytical, Conceptual and Evaluative Skills (ACE)</fullName>
            </value>
            <value>
                <fullName>Interpersonal Skills (IP)</fullName>
            </value>
            <value>
                <fullName>Personal Management &amp; Development Skills (PMD)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>