force-app/main/default/objects/Module__c/fields/Competency_Level__c.field-meta.xml
<CustomField>
    <fullName>Competency_Level__c</fullName>
    <label>Competency Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Advanced</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Team Leaders/Executives/Supervisors</fullName>
            </value>
            <value>
                <fullName>Managers</fullName>
            </value>
            <value>
                <fullName>Senior Manager/Directors</fullName>
            </value>
            <value>
                <fullName>Operational</fullName>
            </value>
            <value>
                <fullName>Supervisory</fullName>
            </value>
            <value>
                <fullName>Managerial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>