force-app/main/default/objects/Module__c/fields/Mid_Career__c.field-meta.xml
<CustomField>
    <fullName>Mid_Career__c</fullName>
    <label>Mid-Career</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>