force-app/main/default/objects/Module__c/fields/Non_SME_Grant_GST_Amount__c.field-meta.xml
<CustomField>
    <fullName>Non_SME_Grant_GST_Amount__c</fullName>
    <label>Non-SME Grant GST Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>