force-app/main/default/objects/Module__c/fields/Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>Sub_Category__c</fullName>
    <label>Sub Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Strategy Execution</fullName>
            </value>
            <value>
                <fullName>Business Management</fullName>
            </value>
            <value>
                <fullName>BM</fullName>
            </value>
            <value>
                <fullName>Employability skills</fullName>
            </value>
            <value>
                <fullName>Leadership &amp; People Management</fullName>
            </value>
            <value>
                <fullName>EDGE</fullName>
            </value>
            <value>
                <fullName>Funded conferences</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>