force-app/main/default/objects/Module__c/fields/Workfare__c.field-meta.xml
<CustomField>
    <fullName>Workfare__c</fullName>
    <label>Workfare</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>